--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>予約状況管理画面</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
+  <header>
+
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
   
+<script src="js/main.js"></script>
 </body>
 </html>
