--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
 </head>
 <body>
   <header>
-
+    <div id="wrapper">
+      <div class="contents">
+        <div id="jsCalendar">
+          <table class="innerTable">
+            <thead>
+              <tr>
+                <th rowspan="2" class="weekPaging">
+                  <span class="arrowPagingWeek">
+                    前の一週間
+                  </span>
+                </th>
+                <th colspan="14" class="monthCell">
+                  2020年12月
+                </th>
+                <th rowspan="2" class="weekPaging">
+                  <a href="" title="次の一週間" class="arrowPagingWeekR"></a>
+                </th>
+              </tr>
+              <tr class="dayCellContainer">
+                <th class="sat">
+                12<br>(土)</th>
+                <th class="sun">
+                12<br>(日)</th>
+                <th class="day">
+                12<br>(日)</th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+      </div>
+    </div>
   </header>
   <main>
 
