--- a/index.html
+++ b/index.html
@@ -30,11 +30,72 @@
                 <th class="sat">
                 12<br>(土)</th>
                 <th class="sun">
-                12<br>(日)</th>
-                <th class="day">
-                12<br>(日)</th>
+                13<br>(日)</th>
+                <th class="dayCell">
+                14<br>(月)</th>
+                <th class="dayCell">
+                15<br>(火)</th>
+                <th class="dayCell">
+                16<br>(水)</th>
+                <th class="dayCell">
+                17<br>(木)</th>
+                <th class="dayCell">
+                18<br>(金)</th>
+                <th class="sat">
+                19<br>(土)</th>
+                <th class="sun">
+                20<br>(日)</th>
+                <th class="dayCell">
+                21<br>(月)</th>
+                <th class="dayCell">
+                22<br>(火)</th>
+                <th class="dayCell">
+                23<br>(水)</th>
+                <th class="dayCell">
+                24<br>(木)</th>
+                <th class="dayCell">
+                25<br>(金)</th>
               </tr>
             </thead>
+            <tbody>
+              <tr>
+                <th>
+                  <table>
+                    <tbody>
+                      <tr><th class="timeCellpLine">9:00</th></tr>
+                      <tr><th class="timeCell">9:30</th></tr>
+                      <tr><th class="timeCellpLine">10:00</th></tr>
+                      <tr><th class="timeCell">10:30</th></tr>
+                      <tr><th class="timeCellpLine">11:00</th></tr>
+                      <tr><th class="timeCell">11:30</th></tr>
+                      <tr><th class="timeCellpLine">12:00</th></tr>
+                      <tr><th class="timeCell">12:30</th></tr>
+                      <tr><th class="timeCellpLine">13:00</th></tr>
+                      <tr><th class="timeCell">13:30</th></tr>
+                      <tr><th class="timeCellpLine">14:00</th></tr>
+                      <tr><th class="timeCell">14:30</th></tr>
+                      <tr><th class="timeCellpLine">15:00</th></tr>
+                      <tr><th class="timeCell">15:30</th></tr>
+                      <tr><th class="timeCellpLine">16:00</th></tr>
+                      <tr><th class="timeCell">16:30</th></tr>
+                      <tr><th class="timeCellpLine">16:00</th></tr>
+                      <tr><th class="timeCell">16:30</th></tr>
+                      <tr><th class="timeCellpLine">17:00</th></tr>
+                      <tr><th class="timeCell">17:30</th></tr>
+                      <tr><th class="timeCellpLine">18:00</th></tr>
+                      <tr><th class="timeCell">18:30</th></tr>
+                      <tr><th class="timeCellpLine">19:00</th></tr>
+                      <tr><th class="timeCell">19:30</th></tr>
+                      <tr><th class="timeCellpLine">20:00</th></tr>
+                      <tr><th class="timeCell">20:30</th></tr>
+                    </tbody>
+                  </table>
+                </th>
+              </tr>
+              <th class="innerCol">
+                <table></table>
+              </th>
+            </tbody>
           </table>
         </div>
       </div>
